
    Implemented protected/1 and private/1 properties for objects, protocols,
    and categories. Together with the public/1 property, these properties
    allows the list of predicates declared in the entity to be accessed for
    reflective computations. Implemented declares/2 and defines/2 properties
    for accessing the properties of predicates declared and defined within an
    entity.

    Implemented compiler support for the meta_non_terminal/1 directive and the
    call//N built-in non-terminal.

    Simplified the compilation of grammar rules by removing the support for
    dealing with non-terminal scope and existence errors at the grammar rule
    level instead of the predicate level. Although this feature could be
    helpful when debugging grammar rules, it complicated the integration of
    Logtalk with Prolog-native development tools.

    Updated the Logtalk compiler in order to save the entity clause locations
    and make this information available to the back-end Prolog compilers.

    Updated the Logtalk compiler in order to avoid generating unnecessary
    internal catchall clauses for the predicate declaration and definition
    tables for dynamic entities.

    Updated the Logtalk compiler in order to preclude using multifile
    predicates for breaking object encapsulation. In addition, defining
    clauses for a multifile Entity::Functor/Arity without a corresponding
    multifile/1 directive will now result in a compilation error instead
    of simply a warning.

    Removed the Logtalk compiler restriction that forced discontiguous/1
    and dynamic/1 directives to precede calls to the declared predicates.

    Allow the use of the :/1 control construct on the body of grammar rules.

    When debugging messages specified in uses/2 directives, the message is now
    printed implicitly qualified as in the source code written by the user.

    Changed the internal predicates used in the implementation of the built-in