@@ -904,6 +904,8 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>protected(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>declares(</code>" predicate_indicator "<code>,</code>" predicate_declaration_property_list "<code>)</code>" |</dd>
+			<dd>"<code>defines(</code>" predicate_indicator "<code>,</code>" predicate_definition_property_list "<code>)</code>" |</dd>
 			<dd>"<code>parameter_names(</code>" <em>list of atoms</em> "<code>)</code>"</dd>
 	</dl>
 	<dl id="grammar_object_property">
@@ -922,6 +924,8 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>protected(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>declares(</code>" predicate_indicator "<code>,</code>" predicate_declaration_property_list "<code>)</code>" |</dd>
+			<dd>"<code>defines(</code>" predicate_indicator "<code>,</code>" predicate_definition_property_list "<code>)</code>" |</dd>
 			<dd>"<code>parameter_names(</code>" <em>list of atoms</em> "<code>)</code>"</dd>
 	</dl>
 	<dl id="grammar_protocol_property">
@@ -933,7 +937,44 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 			<dd>"<code>lines(</code>" <em>integer</em> "<code>,</code>" <em>integer</em> "<code>)</code>" |</dd>
 			<dd>"<code>public(</code>" predicate_indicator_list "<code>)</code>" |</dd>
 			<dd>"<code>protected(</code>" predicate_indicator_list "<code>)</code>" |</dd>
-			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>"</dd>
+			<dd>"<code>private(</code>" predicate_indicator_list "<code>)</code>" |</dd>
+			<dd>"<code>declares(</code>" predicate_indicator "<code>,</code>" predicate_declaration_property_list "<code>)</code>"</dd>
+	</dl>
+
+	<dl>
+		<dt>predicate_declaration_property_list ::=</dt>
+			<dd>"<code>[</code>" predicate_declaration_property_sequence "<code>]</code>"</dd>
+	</dl>
+	<dl>
+		<dt>predicate_declaration_property_sequence ::=</dt>
+			<dd>predicate_declaration_property |</dd>
+			<dd>predicate_declaration_property "<code>,</code>" predicate_declaration_property_sequence</dd>
+	</dl>
+	<dl>
+		<dt>predicate_declaration_property ::=</dt>
+			<dd>"<code>static</code>" | "<code>dynamic</code>" |</dd>
+			<dd>"<code>private</code>" | "<code>protected</code>" | "<code>public</code>" |</dd>
+			<dd>"<code>coinductive</code>" |</dd>
+			<dd>"<code>multifile</code>" |</dd>
+			<dd>"<code>synchronized</code>" |</dd>
+			<dd>"<code>meta_predicate(</code>" meta_predicate_template "<code>)</code>" |</dd>
+			<dd>"<code>non_terminal(</code>" non_terminal_indicator "<code>)</code>" |</dd>
+			<dd>"<code>line(</code>" <em>integer</em> "<code>)</code>"</dd>
+	</dl>
+
+	<dl>
+		<dt>predicate_definition_property_list ::=</dt>
+			<dd>"<code>[</code>" predicate_definition_property_sequence "<code>]</code>"</dd>
+	</dl>
+	<dl>
+		<dt>predicate_definition_property_sequence ::=</dt>
+			<dd>predicate_definition_property |</dd>
+			<dd>predicate_definition_property "<code>,</code>" predicate_definition_property_sequence</dd>
+	</dl>
+	<dl>
+		<dt>predicate_definition_property ::=</dt>
+			<dd>"<code>line(</code>" <em>integer</em> "<code>)</code>" |</dd>
+			<dd>"<code>clauses(</code>" <em>integer</em> "<code>)</code>"</dd>
 	</dl>
 
 
@@ -958,7 +999,7 @@ The Logtalk grammar is here described using Backus-Naur Form syntax. Non-termina
 <div class="footer">
 	<div class="copyright">
 		<span>Copyright &copy; <a href="mailto:pmoura@logtalk.org">Paulo Moura</a> &mdash; <a href="http://logtalk.org">Logtalk.org</a></span><br/>	
-		<span>Last updated on: May 11, 2011</span>
+		<span>Last updated on: May 13, 2011</span>
 	</div>
 	<div class="navbottom">
 		<span><a href="index.html">previous</a> | <a href="../glossary.html">glossary</a> | <a href="index.html">next</a></span><br/>
