@@ -32,7 +32,10 @@ RELEASE NOTES
     allows the list of predicates declared in the entity to be accessed for
     reflective computations. Implemented declares/2 and defines/2 properties
     for accessing the properties of predicates declared and defined within an
-    entity.
+    entity. Declaration properties include line/1, the line number of the
+    predicate scope directive. Definition properties include line/1, the line
+    number of the head of the first clause for the predicate, and clauses/1,
+    the number of clauses for the predicate.
 
     Implemented compiler support for the meta_non_terminal/1 directive and the
     call//N built-in non-terminal.
